style/main.css
/*csslint ids:false*/

body {
  width:980px;
  margin:auto;

  font-family: Helvetica, Arial, sans-serif;
}

nav {
  clear:both;
  margin-top:10px;
}

h1 {
  float:left;
  width:550px;

  margin:0;
  padding:0;
  font-size: 70px;

  font-weight:normal;
}

h2 {
    margin:0;
    padding:0;
    font-weight:normal;
    margin-bottom: 4px;
    font-size: 32px;
}

h3 {
    display:inline-block;

    font-size: 20px;
    font-weight:normal;

    margin:0;
    margin-bottom:1px;
    padding:0;
}


h4, #education p {
  clear:both;
  font-size: 14px;
  font-weight:normal;

  padding:0;


  margin:0;
}

h4 {
  color: #888888;
  padding-bottom:10px;
}

a {
  text-decoration: none;
}

a:visited, a {
  color: #0f77d9;
}

header {
  height:80px;
  width:960px;

  clear:both;
}

section {
    margin-bottom: 15px;
}

article {
  padding-bottom:15px;
}

article:last-of-type {
  padding-bottom:0;
}

article .date {
  vertical-align: middle;

  color: #888888;
  font-size:14px;
  margin-bottom:4px;
  display: inline-block;
  margin-left:5px;
}

article li .date {
  margin-bottom:2px;
  font-size:12px;
}

article:hover {
    background-color: #DDDDEE;
}

article ul {
  margin-top:0;
  padding-top:0;
  margin-bottom:0;
  padding-bottom:0;
}

article ul li {
  font-size:16px;
  margin-bottom: 4px;
}
article ul li:last-child {
  margin-bottom: 0;
}

@media print {
  /* TODO: make links turn normal colour when you actually print rather than export to pdf */
  /*
  a {
    color: inherit;
  }
  a:visited {
    color: inherit;
  }
  */

  .no-print {
    display:none;
  }
  .dim {
      display : none;
  }
}

.dim, .dim a:visited, .dim a{
  color:#BBBBCC;
}

.dim span, .dim h4, .dim ul, .dim .date, .dim p {
    display : none;
}

#skills ul {
  font-size: 13.5px;
  list-style: none;
  padding:0;
  margin:0;
}

#skills ul li {
  display:inline-block;
  margin-left:10px;
}

#skills ul li:first-child {
  margin-left:0;
}

#skills ul .intermediate {
  font-weight: normal;
}

#skills ul .experienced {
  font-weight: bold;
}

#frameworks {
  display: inline-block;
}

#frameworks::before {
  content: '(';
}

#frameworks::after {
  content: ')';
}

#frameworks li::after {
  content : ',';
}

#frameworks li:last-of-type::after {
  content : '';
}

#contact {
  width:350px;
  margin:0;
  padding:0;
  list-style: none;
  font-size:18px;

  text-align: right;
  float:right;

  line-height: 23px;
}

#presets {
  float:left;
}

